Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-90783

Can example: Segmentation fault in payload(hex) editor(HexIntegerValidator)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 6.2.0 Alpha
    • 5.12, 5.15.2
    • SerialBus: CAN Bus
    • None
    • All
    • 76a57dfe9fe96d03fb41280e0eaecd9927b94a32 (qt/qtserialbus/dev)

    Description

      Editing correct expression. e.g. removing whitespace in the mid leads to recursive call of 'QWidgetLineControl' methods 'finishChange' <-> 'internalSetText', stack overflow and app crash.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            eugesh Evgeny Shtanov
            eugesh Evgeny Shtanov
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes