Can example: Fix crash in payload hex editor

[ChangeLog][CAN Example]
Fixed a crash in the payload hex editor when deleting characters in the middle.

Fixes: QTBUG-90783
Change-Id: I95d1f1826c6d19195c2538b6adf214a9d9d5f47f
Reviewed-by: Denis Shienkov <denis.shienkov@gmail.com>
Reviewed-by: André Hartmann <aha_1980@gmx.de>